[gd_scene load_steps=6 format=3 uid="uid://bk2jugtns1bx4"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_o7n6a"]
[ext_resource type="PackedScene" uid="uid://dolpjwec18lut" path="res://objects/card_node/card_node.tscn" id="2_vxlwd"]
[ext_resource type="Script" path="res://scenes/main/deck_picker.gd" id="3_3vp8t"]
[ext_resource type="Texture2D" uid="uid://oy55xtynk2f8" path="res://icon.svg" id="3_wnejg"]
[ext_resource type="Resource" uid="uid://dgeu44lduvjyl" path="res://resources/decks/debug_ru.tres" id="4_8pvgj"]

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7n6a")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CardNumber" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="CardsLeftLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "???/???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Card" parent="CenterContainer" instance=ExtResource("2_vxlwd")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="DeckPicker" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("3_3vp8t")
decks = Array[Resource("res://objects/card/deck.gd")]([ExtResource("4_8pvgj")])

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DeckPicker"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CenterContainer/DeckPicker/VBoxContainer"]
layout_mode = 2
text = "Select a deck:"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/DeckPicker/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="DeckContainer" type="HFlowContainer" parent="CenterContainer/DeckPicker/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="CenterContainer/DeckPicker/VBoxContainer/ScrollContainer/DeckContainer"]
custom_minimum_size = Vector2(190, 190)
layout_mode = 2
text = "Default (12)"
icon = ExtResource("3_wnejg")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ButtonReturn" type="Button" parent="CenterContainer/DeckPicker/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Return
"

[node name="Options" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="OptionCardNumbers" type="CheckBox" parent="CenterContainer/Options/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show card numbers"

[node name="OptionViewerMode" type="CheckBox" parent="CenterContainer/Options/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Card viewer mode"

[node name="OptionDeckSize" type="CheckBox" parent="CenterContainer/Options/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show deck size"

[node name="OptionDynamic" type="CheckBox" parent="CenterContainer/Options/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dynamic cards"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Multiple Dynamic"

[node name="OptionDynamicCount" type="SpinBox" parent="CenterContainer/Options/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
allow_greater = true
select_all_on_focus = true

[node name="OptionNukeTheMoon" type="CheckBox" parent="CenterContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Nuke the moon"

[node name="ButtonCloseOptions" type="Button" parent="CenterContainer/Options/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ButtonLeft" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "<<"

[node name="ButtonReset" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="ButtonDecks" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Decks"

[node name="ButtonSettings" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="ButtonRight" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = ">>"
